--- a/index.html
+++ b/index.html
@@ -201,14 +201,20 @@ topics of the workshop in a journal. More information will be soon provided.
 			<br> Ovidiu Constantin, Oracle, Italy
 			<br> Liliana Dobrica, POLITEHNICA Universiy, Romania
 			<br> Khalil Drira, University of Toulouse, France
+			<br> Ernö Kovacs, NEC Laboratories Europe, Germany
 			<br> Ernesto Exposito, University of Pau, France
 			<br> Paolo Falcarin, University of East London, UK
 			<br> Maria Grazia Fugini, Politecnico di Milano, Italy
+			<br> Nikolaos Georgantas, INRIA, France	
+			<br> Henry Muccini, Università degli Studi dell'Aquila, Italy
 			<br> Stefano Mussino, ReDiX Informatica s.r.l., Italy
 			<br> Patrizio Pelliccione, Chalmers University of Technology and University of Gothenburg, Sweden
+			<br> Marie Christin Platenius, Paderborn University, Germany
 			<br> Claudia Raibulet, University of Milano-Bicocca, Italy
+			<br> Romina Spalazzese, Malmö University, Sweden
+			<br> Vera Stavroulaki, Wings ICT Solutions Ltd., Greece
 			<br> Thierry Villemur, University of Toulouse and LAAS-CNRS, France
-			<br> TO BE EXTENDED!
+			<br> 
 			<br><p><a href="#home">Go to top</a>
 		</article>
 		
