--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ article {
 <article id="home">
 	<h1 id="#home">Home</h1>
 	<p>
-		<font color = "red"<b>News: Submission deadline extended until July, 5th, 2017. </b></font>
+		<font color = "red"<b>News: Notification deadline extended to July, 21st, 2017. </b></font>
 	<p>
 	Software is becoming more and more aware of its current execution context. Decisions traditionally made at design time are moved at run-time to enhance the services offered by the software to its users. Furthermore, software reasons about the execution environments and its internal status to enhance the functionality provided by its users. Some of the keywords that characterize the software today are: context-aware, dynamic, autonomous, smart, adaptive, self-managed. 
 	</p>
@@ -143,7 +143,7 @@ applications;
 		<article id="dates">
 			<h1 id="#dates"> Important Dates</h1>
 		  	<p> Paper submission EXTENDED: July, 5th, 2017<br> 
-		  	Paper notification: July, 17th, 2017<br>
+		  	Paper notification EXTENDED: July, 21st, 2017<br>
 			Camera ready: July, 24th, 2017	  <br>
 	<p>			<br><a href="#home">Go to top</a>
 		</article>
@@ -214,7 +214,6 @@ topics of the workshop in a journal. More information will be soon provided.
 			<br> Romina Spalazzese, Malmö University, Sweden
 			<br> Vera Stavroulaki, Wings ICT Solutions Ltd., Greece
 			<br> Thierry Villemur, University of Toulouse and LAAS-CNRS, France
-			<br> 
 			<br><p><a href="#home">Go to top</a>
 		</article>
 		
