--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ article {
     	  <li><a href="#dates">Important Dates</a></li>
           <li><a href="#submission">Submission Guidelines</a></li>
 	  <li><a href="#publication">Publication</a></li>
+	  <li><a href="#acceptedpapers">Accepted Papers</a></li>
 	  <li><a href="#organizers">Workshop Organizers</a></li>
 	  <li><a href="#programcommittee">Program Committee</a></li>
 	  <li><a href="#submissionsite">Submission Site</a></li>
@@ -94,9 +95,6 @@ article {
 		
 <article id="home">
 	<h1 id="#home">Home</h1>
-	<p>
-		<font color = "red"<b>News: Notification deadline extended to July, 21st, 2017. </b></font>
-	<p>
 	Software is becoming more and more aware of its current execution context. Decisions traditionally made at design time are moved at run-time to enhance the services offered by the software to its users. Furthermore, software reasons about the execution environments and its internal status to enhance the functionality provided by its users. Some of the keywords that characterize the software today are: context-aware, dynamic, autonomous, smart, adaptive, self-managed. 
 	</p>
 	<p></p>
@@ -181,7 +179,25 @@ workshop and to present the paper.
 topics of the workshop in a journal. More information will be soon provided.
 <br><p><a href="#home">Go to top</a>
 		</article>
+
 		
+			<article id="acceptedpapers">
+			<h1 id="#acceptedpapers">Accepted Papers </h1>
+			<p> Research papers:
+			<ul> 
+			<li> Mai Abusair, Antinisca Di Marco, Paola Inverardi: An Empirical Approach for Determining Context of Mobile Systems.
+			<li> Mai Abusair, Mohammad Sharaf, Henry Muccini, Paola Inverardi: Adaptation for Situational-Aware Cyber-Physical Systems Driven by Energy Consumption and Human Safety.
+			</ul> 
+			<p> Position papers:
+			<ul> Bahtijar Vogel, Dimitrios Gkouskos: An Open Architecture Approach: Towards Common Design Principles for an IoT Architecture.
+			<li> Anna Reale, Melinda Tóth, Zoltán Horváth: Towards Context Aware Computations Offloading in 5G.
+			<li> 
+			</ul>				
+			<p> We plan to invite the accepted papers to a <b>special issue</b> on the
+topics of the workshop in a journal. More information will be soon provided.
+<br><p><a href="#home">Go to top</a>
+		</article>
+
 		
 <article id="organizers">
 	<h1 id="#organizers">Workshop Organizers</h1>
