--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@ article {
 		
 <article id="home">
 	<h1 id="#home">Home</h1>
+	<font color="red"> News: Invited speaker: Tomas Bures. Topic: Autonomic component ensembles for dynamic evolving architectures of context aware smart systems.	</font>
 	Software is becoming more and more aware of its current execution context. Decisions traditionally made at design time are moved at run-time to enhance the services offered by the software to its users. Furthermore, software reasons about the execution environments and its internal status to enhance the functionality provided by its users. Some of the keywords that characterize the software today are: context-aware, dynamic, autonomous, smart, adaptive, self-managed. 
 	</p>
 	<p></p>
@@ -189,12 +190,11 @@ topics of the workshop in a journal. More information will be soon provided.
 			<li> Mai Abusair, Mohammad Sharaf, Henry Muccini, Paola Inverardi: Adaptation for Situational-Aware Cyber-Physical Systems Driven by Energy Consumption and Human Safety.
 			</ul> 
 			<p> Position papers:
-			<ul> Bahtijar Vogel, Dimitrios Gkouskos: An Open Architecture Approach: Towards Common Design Principles for an IoT Architecture.
+			<ul> 
 			<li> Anna Reale, Melinda Tóth, Zoltán Horváth: Towards Context Aware Computations Offloading in 5G.
-			<li> 
+			<li> Bahtijar Vogel, Dimitrios Gkouskos: An Open Architecture Approach: Towards Common Design Principles for an IoT Architecture.
 			</ul>				
-			<p> We plan to invite the accepted papers to a <b>special issue</b> on the
-topics of the workshop in a journal. More information will be soon provided.
+			
 <br><p><a href="#home">Go to top</a>
 		</article>
 
