--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@ article {
 <article id="home">
 	<h1 id="#home">Home</h1>
 	<font color="red"> News: Invited speaker: Tomas Bures. Topic: Autonomic component ensembles for dynamic evolving architectures of context aware smart systems.	</font>
+	<br><p>
 	Software is becoming more and more aware of its current execution context. Decisions traditionally made at design time are moved at run-time to enhance the services offered by the software to its users. Furthermore, software reasons about the execution environments and its internal status to enhance the functionality provided by its users. Some of the keywords that characterize the software today are: context-aware, dynamic, autonomous, smart, adaptive, self-managed. 
 	</p>
 	<p></p>
@@ -206,7 +207,9 @@ topics of the workshop in a journal. More information will be soon provided.
 		MariaGrazia Fugini, Politecnico di Milano, Italy --- Email: fugini at polimi.it<br>
 	 	Khalil Drira, LAAS-CNRS, Université de Toulouse, France --- Email: khalil at laas.fr<br>
 	 	Patrizio Pelliccione, Chalmers University of Technology and University of Gothenburg, Sweden --- Email: patrizio.pelliccione at cse.gu.se<br>
-		
+		Ilias Gerostathopoulos, Fakultät für Informatik, Technische Universität München,  Germany --- Email: gerostat@in.tum.de<br>
+		Klaus Moessner, University of Surrey, UK --- Email: k.moessner@surrey.ac.uk <br>
+		Christian Prehofer, fortiss GmbH and Fakultät für Informatik, Technische Universität München, Germany --- Email: prehofer@fortiss.org <br>
 		<br><p><a href="#home">Go to top</a>
 		
 </article>
