--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ topics of the workshop in a journal. More information will be soon provided.
 		
 		<article id="registration">
 			<h1 id="#registration">Registration</h1>
-			<p> Coming soon!
+			<a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/registration.html"> ECSA 2017 Registration </a>
 			<br><p><a href="#home">Go to top</a>
 		</article>
 		
