--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ topics of the workshop in a journal. More information will be soon provided.
 		<article id="venue">
 			<h1 id="#venue">Venue</h1>
 			<a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/venue.html"> ECSA 2017 Venue</a>
-<p>			<br><p><a href="#home">Go to top</a>
+			<br><p><a href="#home">Go to top</a>
 		</article>
 		
 	</div>
