--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@ article {
           <li><a href="#submission">Submission Guidelines</a></li>
 	  <li><a href="#publication">Publication</a></li>
 	  <li><a href="#acceptedpapers">Accepted Papers</a></li>
+	  <li><a href="#Program">Workshop Program</a></li>
 	  <li><a href="#organizers">Workshop Organizers</a></li>
 	  <li><a href="#programcommittee">Program Committee</a></li>
 	  <li><a href="#submissionsite">Submission Site</a></li>
@@ -95,6 +96,8 @@ article {
 		
 <article id="home">
 	<h1 id="#home">Home</h1>
+	<font color="red"> News: Workshop Program now available <a href="#Program"> here</a>.</font>
+	<br><p>
 	<font color="red"> News: Invited speaker: Tomas Bures. Topic: Autonomic component ensembles for dynamic evolving architectures of context aware smart systems.	</font>
 	<br><p>
 	Software is becoming more and more aware of its current execution context. Decisions traditionally made at design time are moved at run-time to enhance the services offered by the software to its users. Furthermore, software reasons about the execution environments and its internal status to enhance the functionality provided by its users. Some of the keywords that characterize the software today are: context-aware, dynamic, autonomous, smart, adaptive, self-managed. 
@@ -199,6 +202,37 @@ topics of the workshop in a journal. More information will be soon provided.
 <br><p><a href="#home">Go to top</a>
 		</article>
 
+		
+		<article id="Program">
+			<h1 id="#Program">Workshop Program </h1>
+<p> 9:15 - 9:30 Welcome and Opening
+<br>	
+<p> 9:30 - 10:30 Keynote: Tomas Bures: Autonomic component ensembles for dynamic evolving architectures of context aware smart systems.
+<br>
+<p> 10:30 -11:00 Break
+<br>
+<p> 11:00 - 12:30 First Session: Mobile Systems - Chair: Claudia Raibulet
+<br>
+<p> 11:00 - 11:30 Mai Abusair, Antinisca Di Marco, Paola Inverardi: An Empirical Approach for Determining Context of Mobile Systems
+<br>
+<p> 11:30 - 12:00 Anna Reale, Melinda Tóth, Zoltán Horváth: Towards Context Aware Computations Offloading in 5G.
+<br>
+<p> 12:00 - 12:30 Round Discussion
+<br>
+<p> 12:30 -14:00 Lunch
+<br> 
+<p> 14:00 - 15:30 Second Session: Context-Aware Systems - Chair Khalil Drira
+<br>
+<p> 14:00 - 14:30 Mai Abusair, Mohammad Sharaf, Henry Muccini, Paola Inverardi: Adaptation for Situational-Aware Cyber-Physical Systems Driven by Energy Consumption and Human Safety.
+<br>
+<p> 14:30 - 15:00 Bahtijar Vogel, Dimitrios Gkouskos: An Open Architecture Approach: Towards Common Design Principles for an IoT Architecture.
+<br> 15:00 - 15:30 Final Discussion & Planning CASA2018
+			
+<br><p><a href="#home">Go to top</a>
+		</article>
+		
+		
+		
 		
 <article id="organizers">
 	<h1 id="#organizers">Workshop Organizers</h1>
