--- a/index.html
+++ b/index.html
@@ -205,12 +205,13 @@ topics of the workshop in a journal. More information will be soon provided.
 		
 		<article id="Program">
 			<h1 id="#Program">Workshop Program </h1>
+<font color="blue">
 <p> 9:15 - 9:30 Welcome and Opening
 <br>	
 <p> 9:30 - 10:30 Keynote: Tomas Bures: Autonomic component ensembles for dynamic evolving architectures of context aware smart systems.
-<br>
+	<br></font>
 <p> 10:30 -11:00 Break
-<br>
+<br><font color="blue">
 <p> 11:00 - 12:30 First Session: Mobile Systems - Chair: Claudia Raibulet
 <br>
 <p> 11:00 - 11:30 Mai Abusair, Antinisca Di Marco, Paola Inverardi: An Empirical Approach for Determining Context of Mobile Systems
@@ -218,16 +219,17 @@ topics of the workshop in a journal. More information will be soon provided.
 <p> 11:30 - 12:00 Anna Reale, Melinda Tóth, Zoltán Horváth: Towards Context Aware Computations Offloading in 5G.
 <br>
 <p> 12:00 - 12:30 Round Discussion
-<br>
+	<br></font>
 <p> 12:30 -14:00 Lunch
-<br> 
+<br> <font color="blue">
 <p> 14:00 - 15:30 Second Session: Context-Aware Systems - Chair Khalil Drira
 <br>
 <p> 14:00 - 14:30 Mai Abusair, Mohammad Sharaf, Henry Muccini, Paola Inverardi: Adaptation for Situational-Aware Cyber-Physical Systems Driven by Energy Consumption and Human Safety.
 <br>
 <p> 14:30 - 15:00 Bahtijar Vogel, Dimitrios Gkouskos: An Open Architecture Approach: Towards Common Design Principles for an IoT Architecture.
-<br> 15:00 - 15:30 Final Discussion & Planning CASA2018
-			
+<br> 
+<p> 15:00 - 15:30 Final Discussion & Planning CASA2018
+			</font>
 <br><p><a href="#home">Go to top</a>
 		</article>
 		
