--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ article {
 		
 <article id="home">
 	<h1 id="#home">Home</h1>
-	<font color="red"> News: Workshop Program now available <a href="#Program"> here</a>.</font>
+	<font color="red"> News: Workshop Program now available <a href="#Program"> here</a>. And also their related presentations, including Tomas' keynote presentation.</font>
 	<br><p>
 	<font color="red"> News: Invited speaker: Tomas Bures. Topic: Autonomic component ensembles for dynamic evolving architectures of context aware smart systems.	</font>
 	<br><p>
@@ -208,7 +208,8 @@ topics of the workshop in a journal. More information will be soon provided.
 <font color="blue">
 <p> 9:15 - 9:30 Welcome and Opening
 <br>	
-<p> 9:30 - 10:30 Keynote: Tomas Bures: Autonomic component ensembles for dynamic evolving architectures of context aware smart systems.
+<p> 9:30 - 10:30 Keynote: Tomas Bures: Autonomic component ensembles for dynamic evolving architectures of context aware smart systems. 
+	<a href="Keynote-TomasBures-2017.pdf">Slides</a>
 	<br></font>
 <p> 10:30 -11:00 Break
 <br><font color="blue">
