--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ article {
 		
 <article id="home">
 	<h1 id="#home">Home</h1>
-	<font color="red"> News: Workshop Program now available <a href="#Program"> here</a>. And also their related presentations, including Tomas' keynote presentation.</font>
+	<font color="red"> News: Workshop Program now available <a href="#Program"> here</a>. And also the presentations of the accepted papers, including Tomas' keynote presentation.</font>
 	<br><p>
 	<font color="red"> News: Invited speaker: Tomas Bures. Topic: Autonomic component ensembles for dynamic evolving architectures of context aware smart systems.	</font>
 	<br><p>
