--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ topics of the workshop in a journal. More information will be soon provided.
 <a href="Paper3-MaiAbusair-Adaptation.pptx">SLIDES</a>
 	<br>
 <p> 14:30 - 15:00 Bahtijar Vogel, Dimitrios Gkouskos: An Open Architecture Approach: Towards Common Design Principles for an IoT Architecture.
-<a href="Paper-BahtijarVogel.pptx">SLIDES</a>
+<a href="2017 09 12-CASA-ECSA2017_B.Vogel.pdf">SLIDES</a>
 	<br> 
 <p> 15:00 - 15:30 Final Discussion & Planning CASA2018
 			</font>
