--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@ article {
 		
 <article id="home">
 	<h1 id="#home">Home</h1>
+	<font color="red"> NEWS: Special Issue on <a href="https://www.journals.elsevier.com/information-and-software-technology/call-for-papers/special-issue-software-architectures-context-aware">Software Architectures for Context-Aware Smart Systems</a> in the <a href="https://www.journals.elsevier.com/information-and-software-technology"> Information and Software Technology Journal (impact factor: 2.694, SCImago: Q1)</a>. </font>
+	<br><p>
 	<font color="red"> News: Workshop Program now available <a href="#Program"> here</a>. And also the presentations of the accepted papers, including Tomas' keynote presentation.</font>
 	<br><p>
 	<font color="red"> News: Invited speaker: Tomas Bures. Topic: Autonomic component ensembles for dynamic evolving architectures of context aware smart systems.	</font>
