--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ article {
     overflow: hidden;
 }
 </style>
-	<title> Context-aware, Autonomous and Smart Architecture Workshop (CASA 2017)</title>
+	<title> Context-aware, Autonomous and Smart Architecture Workshop (CASA 2018)</title>
 </head>
 
 	<body style="font-style:comic">
@@ -46,30 +46,30 @@ article {
 	<header>
 		<!--<font size="3" color="blue" face="comic">
 		<center><h1> Context-aware, Autonomous and Smart Architecture Workshop<br>
-		 co-located with the <a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/index.html">11th European Conference on Software Architecture</a><br>
-		 11-15 September, 2017, Canterbury, UK<br>
-		 CASA@ECSA2017</h1></center>
+		 co-located with the <a href="https://eventos.upm.es/12427/detail/european-conference-on-software-architectures-2018-ecsa18.html">12th European Conference on Software Architecture</a><br>
+		 24-28 September, 2018, Madrid, Spain<br>
+		 CASA@ECSA2018</h1></center>
 		</font>
 		
 		
 		
 		<!--<font size="3" color="blue" face="comic">
 		<center><h1> Context-aware, Autonomous and Smart Architecture Workshop</h1></center>
-		<center><h1> co-located with the <a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/index.html">11th European Conference on Software Architecture</a></h1></center>
-		<center><h1> 11-15 September, 2017, Canterbury, UK</h1></center>
-			<center><h1>CASA@ECSA2017</h1></center>
+		<center><h1> co-located with the <a href="https://eventos.upm.es/12427/detail/european-conference-on-software-architectures-2018-ecsa18.html">12th European Conference on Software Architecture</a></h1></center>
+		<center><h1> 24-28 September, 2018, Madrid, Spain</h1></center>
+			<center><h1>CASA@ECSA2018</h1></center>
 		</font><-->
 	</header>	
 
 <table style="width:100%">
   <tr>
-    <th style="width:15%"><img src="CASA@ECSA-logo.bmp" alt="CASA@ECSA2017" style="width:200px;height:150px;"></th>
+    <th style="width:15%"><img src="CASA@ECSA-logo.bmp" alt="CASA@ECSA2018" style="width:200px;height:150px;"></th>
     <th style="width:85%">
 <font size="3" color="blue" face="comic">
 		<center><h1> Context-aware, Autonomous and Smart Architecture Workshop<br>
-		 co-located with the <a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/index.html">11th European Conference on Software Architecture</a><br>
-		 11-15 September, 2017, Canterbury, UK<br>
-		 CASA@ECSA2017</h1></center>
+		 co-located with the <a href="https://eventos.upm.es/12427/detail/european-conference-on-software-architectures-2018-ecsa18.html">12th European Conference on Software Architecture</a><br>
+		 24-28 September, 2018, Madrid, Spain<br>
+		 CASA@ECSA2018</h1></center>
 		</font>
 	    
 	  </th>
