--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ article {
 </article>
 	
 <article id="topics"> <h1 id="#topics">Topics</h1>
-<p> The CASA 2017 workshop is interested in all the topics concerning the
+<p> The CASA 2018 workshop is interested in all the topics concerning the
 architectural aspects in Context-aware, Autonomous, and Smart
 (CASA) solutions. Please find below several examples of possible
 topics:
@@ -127,23 +127,24 @@ solutions;
 solutions;
 <li> machine learning and CASA solutions;
 <li> autonomous and self-adaptive aspects of CASA solutions;
+<li> coordination aspects of CASA solutions;
+<li> context-awareness in CASA solutions;
+<li> real-time/latency-awareness in CASA solutions;
 <li> social and technological issues in CASA solutions;
 <li> evolution and maintenance issues in CASA solutions;
-<li> privacy, safety, security, cyber-physical issues in CASA
-solutions;
+<li> privacy, safety, security, cyber-physical issues in CASA solutions;
 <li> testing and evaluation of smartness in CASA solutions;
-<li> software architectures in CASA case studies and innovative
-applications;
+<li> software architectures in CASA case studies and innovative applications;
 <li> teaching software architectures for CASA solutions.
-	</ul>		
-	<p><br><a href="#home">Go to top</a>
+</ul>		
+<p><br><a href="#home">Go to top</a>
 </article>
 		
 		<article id="dates">
 			<h1 id="#dates"> Important Dates</h1>
-		  	<p> Paper submission EXTENDED: July, 5th, 2017<br> 
-		  	Paper notification EXTENDED: July, 21st, 2017<br>
-			Camera ready: July, 24th, 2017	  <br>
+		  	<p> Paper submission: June, 4th, 2018<br> 
+		  	Paper notification: July, 3rd, 2018<br>
+			Camera ready: July, 12th, 2018	  <br>
 	<p>			<br><a href="#home">Go to top</a>
 		</article>
 		
@@ -159,7 +160,7 @@ results from work-in-progress or research challenges in software
 architectures for context-aware, autonomous, and smart solutions.
 			</ul>
 <p> All the papers must be written in English. All the submitted papers should follow the ACM ICPS proceedings templates 
-		available at: <a href="http://www.acm.org/publications/article-templates/proceedings-template.html/"> ACM web site </a>.
+		available at: <a href="http://www.acm.org/publications/proceedings-template"> ACM web site </a>.
 <p> Submitted papers will be reviewed by at least 3 members of
 Program/Organizing Committee (or their sub-reviewers) and
 selection of accepted papers will be based on relevance, quality
@@ -175,7 +176,7 @@ workshop and to present the paper.
 		
 		<article id="publication">
 			<h1 id="#publication">Publication </h1>
-			<p> All the accepted papers will be published in the ECSA2017 Companion by ACM ICPS. 
+			<p> All the accepted papers will be published in the ECSA2018 Companion by ACM. 
 			<p> We plan to invite the accepted papers to a <b>special issue</b> on the
 topics of the workshop in a journal. More information will be soon provided.
 <br><p><a href="#home">Go to top</a>
@@ -183,8 +184,8 @@ topics of the workshop in a journal. More information will be soon provided.
 
 		
 			<article id="acceptedpapers">
-			<h1 id="#acceptedpapers">Accepted Papers </h1>
-			<p> Research papers:
+			<h1 id="#acceptedpapers">Accepted Papers: TBD </h1>
+<!--			<p> Research papers:
 			<ul> 
 			<li> Mai Abusair, Antinisca Di Marco, Paola Inverardi: An Empirical Approach for Determining Context of Mobile Systems.
 			<li> Mai Abusair, Mohammad Sharaf, Henry Muccini, Paola Inverardi: Adaptation for Situational-Aware Cyber-Physical Systems Driven by Energy Consumption and Human Safety.
@@ -194,14 +195,14 @@ topics of the workshop in a journal. More information will be soon provided.
 			<li> Anna Reale, Melinda Tóth, Zoltán Horváth: Towards Context Aware Computations Offloading in 5G.
 			<li> Bahtijar Vogel, Dimitrios Gkouskos: An Open Architecture Approach: Towards Common Design Principles for an IoT Architecture.
 			</ul>				
-			
+-->			
 <br><p><a href="#home">Go to top</a>
 		</article>
 
 		
 		<article id="Program">
-			<h1 id="#Program">Workshop Program </h1>
-<font color="blue">
+			<h1 id="#Program">Workshop Program: TBD </h1>
+<!--<font color="blue">
 <p> 9:15 - 9:30 Welcome and Opening
 <br>	
 <p> 9:30 - 10:30 Keynote: Tomas Bures: Autonomic component ensembles for dynamic evolving architectures of context aware smart systems. 
@@ -231,6 +232,7 @@ topics of the workshop in a journal. More information will be soon provided.
 	<br> 
 <p> 15:00 - 15:30 Final Discussion & Planning CASA2018
 			</font>
+-->
 <br><p><a href="#home">Go to top</a>
 		</article>
 		
@@ -241,12 +243,11 @@ topics of the workshop in a journal. More information will be soon provided.
 	<h1 id="#organizers">Workshop Organizers</h1>
 	<p style="font-family:'Comic Sans'">
 	<p>	Claudia Raibulet, University of Milano-Bicocca, Italy --- Email: raibulet at disco.unimib.it<br>
+		Khalil Drira, LAAS-CNRS, Université de Toulouse, France --- Email: khalil at laas.fr<br>
+		Tomáš Bureš, Charles University in Prague, Czech Republic --- Email: bures at d3s.mff.cuni.cz <br>
 		MariaGrazia Fugini, Politecnico di Milano, Italy --- Email: fugini at polimi.it<br>
-	 	Khalil Drira, LAAS-CNRS, Université de Toulouse, France --- Email: khalil at laas.fr<br>
 	 	Patrizio Pelliccione, Chalmers University of Technology and University of Gothenburg, Sweden --- Email: patrizio.pelliccione at cse.gu.se<br>
-		Ilias Gerostathopoulos, Fakultät für Informatik, Technische Universität München,  Germany --- Email: gerostat@in.tum.de<br>
-		Klaus Moessner, University of Surrey, UK --- Email: k.moessner@surrey.ac.uk <br>
-		Christian Prehofer, fortiss GmbH and Fakultät für Informatik, Technische Universität München, Germany --- Email: prehofer@fortiss.org <br>
+		Genaína Nunes Rodrigues, University of Brasilia, Brasile --- Email: genaina at unb.dot.br <br>
 		<br><p><a href="#home">Go to top</a>
 		
 </article>
@@ -255,40 +256,43 @@ topics of the workshop in a journal. More information will be soon provided.
 			<h1 id="#programcommittee">Program Committee </h1>
 			<p> Mahdi Ben Alaya, Sensinov, France
 			<br> Ovidiu Constantin, Oracle, Italy
+			<br> Tomáš Bureš, Charles University, Czech Republic
+			<br> Rafael Capilla, Universidad Rey Juan Carlos, Spain
 			<br> Liliana Dobrica, POLITEHNICA Universiy, Romania
 			<br> Khalil Drira, University of Toulouse, France
-			<br> Ernö Kovacs, NEC Laboratories Europe, Germany
+			<br> Cédric Eichler, INSA Bourge, France
 			<br> Ernesto Exposito, University of Pau, France
 			<br> Paolo Falcarin, University of East London, UK
 			<br> Maria Grazia Fugini, Politecnico di Milano, Italy
-			<br> Nikolaos Georgantas, INRIA, France	
+			<br> Ghada Gharbi, Sensinov, Labege, France
+			<br> Ilhem Khlif, University of Sfax, Tunisia
 			<br> Henry Muccini, Università degli Studi dell'Aquila, Italy
-			<br> Stefano Mussino, ReDiX Informatica s.r.l., Italy
 			<br> Patrizio Pelliccione, Chalmers University of Technology and University of Gothenburg, Sweden
-			<br> Marie Christin Platenius, Paderborn University, Germany
 			<br> Claudia Raibulet, University of Milano-Bicocca, Italy
+			<br> Genaina Nunes Rodriguez, University of Brasilia, Brasile
 			<br> Romina Spalazzese, Malmö University, Sweden
-			<br> Vera Stavroulaki, Wings ICT Solutions Ltd., Greece
 			<br> Thierry Villemur, University of Toulouse and LAAS-CNRS, France
 			<br><p><a href="#home">Go to top</a>
 		</article>
 		
 		<article id="submissionsite">
-			<h1 id="#submissionsite">Submission Site</h1>
-			<p> Please follow the link to submit your contribution: <a href="https://easychair.org/conferences/?conf=casaecsa2017"> CASA@ECSA 2017 Submission Site</a>
+			<h1 id="#submissionsite">Submission Site: TBD</h1>
+			<!--<p> Please follow the link to submit your contribution: <a href="https://easychair.org/conferences/?conf=casaecsa2017"> CASA@ECSA 2018 Submission Site</a>
+-->
 			<br><p><a href="#home">Go to top</a>
 		</article>
 		
 		
 		<article id="registration">
-			<h1 id="#registration">Registration</h1>
-			<a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/registration.html"> ECSA 2017 Registration </a>
+			<h1 id="#registration">Registration: TBD</h1>
+<!--			<a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/registration.html"> ECSA 2017 Registration </a>
+-->		
 			<br><p><a href="#home">Go to top</a>
 		</article>
 		
 		<article id="venue">
 			<h1 id="#venue">Venue</h1>
-			<a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/venue.html"> ECSA 2017 Venue</a>
+			<a href="https://eventos.upm.es/12427/detail/european-conference-on-software-architectures-2018-ecsa18.html"> ECSA 2018 Venue</a>
 			<br><p><a href="#home">Go to top</a>
 		</article>
 		
