--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ solutions;
 		
 		<article id="dates">
 			<h1 id="#dates"> Important Dates</h1>
-		  	<p> Paper submission: June, 4th, 2018<br> 
+		  	<p> Paper submission: June, 11th, 2018<br> 
 		  	Paper notification: July, 3rd, 2018<br>
 			Camera ready: July, 12th, 2018	  <br>
 	<p>			<br><a href="#home">Go to top</a>
@@ -281,7 +281,7 @@ topics of the workshop in a journal. More information will be soon provided.
 		
 		<article id="submissionsite">
 			<h1 id="#submissionsite">Submission Site: TBD</h1>
-			<!--<p> Please follow the link to submit your contribution: <a href="https://easychair.org/conferences/?conf=casaecsa2017"> CASA@ECSA 2018 Submission Site</a>
+			<p> Please follow the link to submit your contribution: <a href="https://easychair.org/conferences/?conf=casaecsa2018"> CASA@ECSA 2018 Submission Site</a>
 -->
 			<br><p><a href="#home">Go to top</a>
 		</article>
