--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ topics of the workshop in a journal. More information will be soon provided.
 		Tomáš Bureš, Charles University in Prague, Czech Republic --- Email: bures at d3s.mff.cuni.cz <br>
 		MariaGrazia Fugini, Politecnico di Milano, Italy --- Email: fugini at polimi.it<br>
 	 	Patrizio Pelliccione, Chalmers University of Technology and University of Gothenburg, Sweden --- Email: patrizio.pelliccione at cse.gu.se<br>
-		Genaína Nunes Rodrigues, University of Brasilia, Brasile --- Email: genaina at unb.dot.br <br>
+		Genaína Nunes Rodrigues, University of Brasilia, Brasil --- Email: genaina at unb.dot.br <br>
 		<br><p><a href="#home">Go to top</a>
 		
 </article>
@@ -273,7 +273,7 @@ topics of the workshop in a journal. More information will be soon provided.
 			<br> Henry Muccini, Università degli Studi dell'Aquila, Italy
 			<br> Patrizio Pelliccione, Chalmers University of Technology and University of Gothenburg, Sweden
 			<br> Claudia Raibulet, University of Milano-Bicocca, Italy
-			<br> Genaina Nunes Rodriguez, University of Brasilia, Brasile
+			<br> Genaina Nunes Rodrigues, University of Brasilia, Brasil
 			<br> Romina Spalazzese, Malmö University, Sweden
 			<br> Thierry Villemur, University of Toulouse and LAAS-CNRS, France
 			<br><p><a href="#home">Go to top</a>
