--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ solutions;
 		
 		<article id="dates">
 			<h1 id="#dates"> Important Dates</h1>
-		  	<p> Paper submission: June, 11th, 2018<br> 
+		  	<p> Paper submission: Extended until June, 18th, 2018<br> 
 		  	Paper notification: July, 3rd, 2018<br>
 			Camera ready: July, 12th, 2018	  <br>
 	<p>			<br><a href="#home">Go to top</a>
