--- a/index.html
+++ b/index.html
@@ -258,18 +258,14 @@ topics of the workshop in a journal. More information will be soon provided.
 	
 		<article id="programcommittee">
 			<h1 id="#programcommittee">Program Committee </h1>
-			<p> Mahdi Ben Alaya, Sensinov, France
+			<p> Tomáš Bureš, Charles University, Czech Republic
 			<br> Ovidiu Constantin, Oracle, Italy
-			<br> Tomáš Bureš, Charles University, Czech Republic
 			<br> Rafael Capilla, Universidad Rey Juan Carlos, Spain
 			<br> Liliana Dobrica, POLITEHNICA Universiy, Romania
 			<br> Khalil Drira, University of Toulouse, France
 			<br> Cédric Eichler, INSA Bourge, France
-			<br> Ernesto Exposito, University of Pau, France
 			<br> Paolo Falcarin, University of East London, UK
-			<br> Maria Grazia Fugini, Politecnico di Milano, Italy
-			<br> Ghada Gharbi, Sensinov, Labege, France
-			<br> Ilhem Khlif, University of Sfax, Tunisia
+			<br> Mariagrazia Fugini, Politecnico di Milano, Italy
 			<br> Henry Muccini, Università degli Studi dell'Aquila, Italy
 			<br> Patrizio Pelliccione, Chalmers University of Technology and University of Gothenburg, Sweden
 			<br> Claudia Raibulet, University of Milano-Bicocca, Italy
