--- a/index.html
+++ b/index.html
@@ -188,18 +188,19 @@ topics of the workshop in a journal. More information will be soon provided.
 
 		
 			<article id="acceptedpapers">
-			<h1 id="#acceptedpapers">Accepted Papers: TBD </h1>
-<!--			<p> Research papers:
+			<h1 id="#acceptedpapers">Accepted Papers: </h1>
+			<p> Research papers:
 			<ul> 
-			<li> Mai Abusair, Antinisca Di Marco, Paola Inverardi: An Empirical Approach for Determining Context of Mobile Systems.
-			<li> Mai Abusair, Mohammad Sharaf, Henry Muccini, Paola Inverardi: Adaptation for Situational-Aware Cyber-Physical Systems Driven by Energy Consumption and Human Safety.
+			<li> Jakob Mass, Chii Chang and Satish Srirama: Context-aware Edge Process Management for Mobile Thing-to-Fog Environment.
+			<li> Mohammad Sharaf, Henry Muccini and Apurvanand Sahay: A Comparative Analysis of Self-Adaptive Patterns in Cyber-Physical Systems.
+			<li> Aurora Macías and Elena Navarro: An Integrated Approach for Context-Aware Development.
 			</ul> 
 			<p> Position papers:
 			<ul> 
-			<li> Anna Reale, Melinda Tóth, Zoltán Horváth: Towards Context Aware Computations Offloading in 5G.
-			<li> Bahtijar Vogel, Dimitrios Gkouskos: An Open Architecture Approach: Towards Common Design Principles for an IoT Architecture.
+			<li> Petr Hnetynka, Petr Kubat, Rima Al Ali, Ilias Gerostathopoulos and Danylo Khalyeyev: Guaranteed Latency Applications in Edge-Cloud Environment.
+			<li> Rima Al-Ali, Robert Heinrich, Petr Hnetynka, Adrian Juan-Verdejo, Stephan Seifermann and Maximilian Walter: Modeling of Dynamic Trust Contracts for Industry 4.0 Systems.
 			</ul>				
--->			
+			
 <br><p><a href="#home">Go to top</a>
 		</article>
 
@@ -276,16 +277,16 @@ topics of the workshop in a journal. More information will be soon provided.
 		</article>
 		
 		<article id="submissionsite">
-			<h1 id="#submissionsite">Submission Site: TBD</h1>
+			<h1 id="#submissionsite">Submission Site: </h1>
 			<p> Please follow the link to submit your contribution: <a href="https://easychair.org/conferences/?conf=casaecsa2018"> CASA@ECSA 2018 Submission Site</a>
 			<br><p><a href="#home">Go to top</a>
 		</article>
 		
 		
 		<article id="registration">
-			<h1 id="#registration">Registration: TBD</h1>
-<!--			<a href="https://www.cs.kent.ac.uk/events/2017/ECSA2017/registration.html"> ECSA 2017 Registration </a>
--->		
+			<h1 id="#registration">Registration:</h1>
+			<a href="https://eventos.upm.es/12427/section/13146/european-conference-on-software-architectures-2018-ecsa18.html"> ECSA 2018 Registration </a>
+		
 			<br><p><a href="#home">Go to top</a>
 		</article>
 		
