--- a/index.html
+++ b/index.html
@@ -206,38 +206,40 @@ topics of the workshop in a journal. More information will be soon provided.
 
 		
 		<article id="Program">
-			<h1 id="#Program">Workshop Program: TBD </h1>
-<!--<font color="blue">
-<p> 9:15 - 9:30 Welcome and Opening
+			<h1 id="#Program">Workshop Program: </h1>
+<font color="blue">
+<p> 9:45 - 10:00 Welcome and Opening
 <br>	
-<p> 9:30 - 10:30 Keynote: Tomas Bures: Autonomic component ensembles for dynamic evolving architectures of context aware smart systems. 
+<!--<p> 9:30 - 10:30 Keynote: Tomas Bures: Autonomic component ensembles for dynamic evolving architectures of context aware smart systems. 
 	<a href="Keynote-TomasBures-2017.pdf">SLIDES</a>
 	<br></font>
-<p> 10:30 -11:00 Break
+!-->
+<p> 10:00 - 11:00 First Session: Towards the Edge - Chair: Claudia Raibulet
+<br>
+<p> 10:00 - 10:30 Jakob Mass, Chii Chang, Satish Srirama: Context-aware Edge Process Management for Mobile Thing-to-Fog Environment
+<br>
+<!--<a href="Paper2-MaiAbusair-EmpiricalApproachMobile.pdf">SLIDES</a>	!-->
+<p> 10:00 - 10:30 Petr Hnetynka, Petr Kubat, Rima Al Ali, Ilias Gerostathopoulos, Danylo Khalyeye: Guaranteed Latency Applications in Edge-Cloud Environment    
+<br>
+	<p> 11:00 -11:30 Break
 <br><font color="blue">
-<p> 11:00 - 12:30 First Session: Mobile Systems - Chair: Claudia Raibulet
+<p> 11:30 - 13:00 Second Session: Models and patterns - Chair: Tomas Bures
 <br>
-<p> 11:00 - 11:30 Mai Abusair, Antinisca Di Marco, Paola Inverardi: An Empirical Approach for Determining Context of Mobile Systems
-<a href="Paper2-MaiAbusair-EmpiricalApproachMobile.pdf">SLIDES</a>	
+<p> 11:30 - 12:00 Aurora Macías, Elena Navarro: An Integrated Approach for Context-Aware Development
 <br>
-<p> 11:30 - 12:00 Anna Reale, Melinda Tóth, Zoltán Horváth: Towards Context Aware Computations Offloading in 5G.
-<a href="Paper1-AnnaReale-5G.pptx">SLIDES</a>
+<p> 12:00 - 12:30 Rima Al-Ali, Robert Heinrich, Petr Hnetynka, Adrian Juan-Verdejo, Stephan Seifermann, Maximilian Walter: Modeling of Dynamic Trust Contracts for Industry 4.0 Systems
 <br>
-<p> 12:00 - 12:30 Round Discussion
-	<br></font>
-<p> 12:30 -14:00 Lunch
+<p> 12:30 - 13:00 Mohammad Sharaf, Henry Muccini, Apurvanand Sahay, A Comparative Analysis of Self-Adaptive Patterns in Cyber-Physical Systems
+<br>	
+	
+<p> 13:00 -14:00 Lunch
 <br> <font color="blue">
-<p> 14:00 - 15:30 Second Session: Context-Aware Systems - Chair Khalil Drira
+<p> 14:00 - 15:30 Breakout groups of about 5-8 persons - on research topics and questions
 <br>
-<p> 14:00 - 14:30 Mai Abusair, Mohammad Sharaf, Henry Muccini, Paola Inverardi: Adaptation for Situational-Aware Cyber-Physical Systems Driven by Energy Consumption and Human Safety.
-<a href="Paper3-MaiAbusair-Adaptation.pptx">SLIDES</a>
-	<br>
-<p> 14:30 - 15:00 Bahtijar Vogel, Dimitrios Gkouskos: An Open Architecture Approach: Towards Common Design Principles for an IoT Architecture.
-<a href="2017 09 12-CASA-ECSA2017_B.Vogel.pdf">SLIDES</a>
-	<br> 
-<p> 15:00 - 15:30 Final Discussion & Planning CASA2018
-			</font>
--->
+	<p> 15:30 -16:00 Break
+
+	<p> 16:00 - 17:30 Final Discussion & Planning CASA2018
+</font>
 <br><p><a href="#home">Go to top</a>
 		</article>
 		
