--- a/index.html
+++ b/index.html
@@ -215,13 +215,13 @@ topics of the workshop in a journal. More information will be soon provided.
 	<br></font>
 !-->
 <p> 10:00 - 11:00 First Session: Towards the Edge - Chair: Claudia Raibulet
-<br>
+	<br>
 <p> 10:00 - 10:30 Jakob Mass, Chii Chang, Satish Srirama: Context-aware Edge Process Management for Mobile Thing-to-Fog Environment
 <br>
 <!--<a href="Paper2-MaiAbusair-EmpiricalApproachMobile.pdf">SLIDES</a>	!-->
 <p> 10:00 - 10:30 Petr Hnetynka, Petr Kubat, Rima Al Ali, Ilias Gerostathopoulos, Danylo Khalyeye: Guaranteed Latency Applications in Edge-Cloud Environment    
 <br>
-	<p> 11:00 -11:30 Break
+			</font><p> 11:00 -11:30 Break
 <br><font color="blue">
 <p> 11:30 - 13:00 Second Session: Models and patterns - Chair: Tomas Bures
 <br>
@@ -232,12 +232,12 @@ topics of the workshop in a journal. More information will be soon provided.
 <p> 12:30 - 13:00 Mohammad Sharaf, Henry Muccini, Apurvanand Sahay, A Comparative Analysis of Self-Adaptive Patterns in Cyber-Physical Systems
 <br>	
 	
-<p> 13:00 -14:00 Lunch
+	</font><p> 13:00 -14:00 Lunch
 <br> <font color="blue">
 <p> 14:00 - 15:30 Breakout groups of about 5-8 persons - on research topics and questions
 <br>
-	<p> 15:30 -16:00 Break
-
+			</font><p> 15:30 -16:00 Break
+<font color="blue">
 	<p> 16:00 - 17:30 Final Discussion & Planning CASA2018
 </font>
 <br><p><a href="#home">Go to top</a>
