--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@ article {
 	<p>
 	The workshop aims to bring together software engineers and computer scientists, researchers, practitioners and educators to discuss and exchanges results, case studies, experiences,  novel approaches and visionary ideas concerning software architectures for context-aware, autonomous, and smart solutions.
 	</p>
+		<p> <font color="red"> NeWs: KEYNOTE - "Data-Driven Context-Aware Architecting: an Experience in the Context of Cyber-Physical Space", by Henry Muccini, univerity of Aquila, Italy
 	<p>
 	<font color="red"> NEWS: There is an open CFP for a Special Issue on <a href="https://www.journals.elsevier.com/information-and-software-technology/call-for-papers/special-issue-software-architectures-context-aware">Software Architectures for Context-Aware Smart Systems</a> in the <a href="https://www.journals.elsevier.com/information-and-software-technology"> Information and Software Technology Journal</a> (impact factor: 2.694, SCImago: Q1) related to the topics of the workshop </font>
 	</p>
@@ -208,12 +209,17 @@ topics of the workshop in a journal. More information will be soon provided.
 		<article id="Program">
 			<h1 id="#Program">Workshop Program: </h1>
 <font color="blue">
-<p> 9:45 - 10:00 Welcome and Opening
+<p> 9:00 - 9:05 Welcome and Opening
 <br>	
+	<p> 9:05 -10:00 Keynote "Data-Driven Context-Aware Architecting: an Experience in the Cyber-Physical Space" by Henry Muccini
+<br>	
+	
+	
 <!--<p> 9:30 - 10:30 Keynote: Tomas Bures: Autonomic component ensembles for dynamic evolving architectures of context aware smart systems. 
 	<a href="Keynote-TomasBures-2017.pdf">SLIDES</a>
 	<br></font>
 !-->
+	
 <p> 10:00 - 11:00 First Session: Towards the Edge - Chair: Claudia Raibulet
 	<br>
 <p> 10:00 - 10:30 Jakob Mass, Chii Chang, Satish Srirama: Context-aware Edge Process Management for Mobile Thing-to-Fog Environment
