--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ article {
 	<p>
 	The workshop aims to bring together software engineers and computer scientists, researchers, practitioners and educators to discuss and exchanges results, case studies, experiences,  novel approaches and visionary ideas concerning software architectures for context-aware, autonomous, and smart solutions.
 	</p>
-		<p> <font color="red"> NeWs: KEYNOTE - "Data-Driven Context-Aware Architecting: an Experience in the Context of Cyber-Physical Space", by Henry Muccini, University of Aquila, Italy
+		<p> <font color="red"> NEWS: KEYNOTE - "Data-Driven Context-Aware Architecting: an Experience in the Context of Cyber-Physical Space", by Henry Muccini, University of L'Aquila, Italy
 			</font>
 			<p>
 		
