--- a/index.html
+++ b/index.html
@@ -224,17 +224,19 @@ topics of the workshop in a journal. More information will be soon provided.
 	
 <p> 10:00 - 11:00 First Session: Towards the Edge - Chair: Claudia Raibulet
 	<br>
-<p> 10:00 - 10:30 Jakob Mass, Chii Chang, Satish Srirama: Context-aware Edge Process Management for Mobile Thing-to-Fog Environment
-<br>
-<!--<a href="Paper2-MaiAbusair-EmpiricalApproachMobile.pdf">SLIDES</a>	!-->
-<p> 10:00 - 10:30 Petr Hnetynka, Petr Kubat, Rima Al Ali, Ilias Gerostathopoulos, Danylo Khalyeye: Guaranteed Latency Applications in Edge-Cloud Environment    
-<br>
+<p> 10:00 - 10:30 Jakob Mass, Chii Chang, Satish Srirama: Context-aware Edge Process Management for Mobile Thing-to-Fog Environment. 
+<a href="Jakob-Context-Aware EPM4.pdf">SLIDES</a>
+	<br>
+<p> 10:00 - 10:30 Petr Hnetynka, Petr Kubat, Rima Al Ali, Ilias Gerostathopoulos, Danylo Khalyeye: Guaranteed Latency Applications in Edge-Cloud Environment. 
+<a href="Ilias-CASA-ECSA2018.pdf">SLIDES</a>
+	<br>
 			</font><p> 11:00 -11:30 Break
 <br><font color="blue">
 <p> 11:30 - 13:00 Second Session: Models and patterns - Chair: Tomas Bures
 <br>
-<p> 11:30 - 12:00 Aurora Macías, Elena Navarro: An Integrated Approach for Context-Aware Development
-<br>
+<p> 11:30 - 12:00 Aurora Macías, Elena Navarro: An Integrated Approach for Context-Aware Development. 
+	<a href="Aurora-CASA2018.pdf">SLIDES</a>
+	<br>
 <p> 12:00 - 12:30 Rima Al-Ali, Robert Heinrich, Petr Hnetynka, Adrian Juan-Verdejo, Stephan Seifermann, Maximilian Walter: Modeling of Dynamic Trust Contracts for Industry 4.0 Systems
 <br>
 <p> 12:30 - 13:00 Mohammad Sharaf, Henry Muccini, Apurvanand Sahay, A Comparative Analysis of Self-Adaptive Patterns in Cyber-Physical Systems
