--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@ topics of the workshop in a journal. More information will be soon provided.
 	<a href="Aurora-CASA2018.pdf">SLIDES</a>
 	
 	<br>
-<p> 12:00 - 12:30 Rima Al-Ali, Robert Heinrich, Petr Hnetynka, Adrian Juan-Verdejo, Stephan Seifermann, Maximilian Walter: Modeling of Dynamic Trust Contracts for Industry 4.0 Systems
+<p> 12:00 - 12:30 Rima Al-Ali, Robert Heinrich, Petr Hnetynka, Adrian Juan-Verdejo, Stephan Seifermann, Maximilian Walter: Modeling of Dynamic Trust Contracts for Industry 4.0 Systems. 
+	<a href="ECSA 2018 - CAS - Adrian Juan-Verdejo.pdf">SLIDES</a>
 <br>
 <p> 12:30 - 13:00 Mohammad Sharaf, Henry Muccini, Apurvanand Sahay, A Comparative Analysis of Self-Adaptive Patterns in Cyber-Physical Systems
 <br>	
